// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tokenizeLine > SHALLOW_TOKENIZATION > case 2 > Should only tokenize p1 1`] = `
<div
  id="div1"
>
  <p
    id="p1"
  >
    <span
      class="jsed-token"
    >
      foo
    </span>
     
    <em
      style="display:inline;"
    >
      <span
        class="jsed-token"
      >
        bar
      </span>
    </em>
     
    <span
      class="jsed-token"
    >
      baz
    </span>
  </p>
  <p
    id="p2"
  >
    foo 
    <em
      style="display:inline;"
    >
      bar
    </em>
     baz
  </p>
</div>
`;

exports[`tokenizeLine > complex LINE: <p>foo <em>bar</em> baz</p> 1`] = `
<p
  id="p1"
>
  <span
    class="jsed-token"
  >
    foo
  </span>
   
  <em
    style="display:inline;"
  >
    <span
      class="jsed-token"
    >
      bar
    </span>
  </em>
   
  <span
    class="jsed-token"
  >
    baz
  </span>
</p>
`;

exports[`tokenizeLine > simple LINE: <p>foo bar baz</p> 1`] = `
<p
  id="p1"
>
  <span
    class="jsed-token"
  >
    foo
  </span>
   
  <span
    class="jsed-token"
  >
    bar
  </span>
   
  <span
    class="jsed-token"
  >
    baz
  </span>
</p>
`;
